--- a/src/app/admin/auth/login/login.component.html
+++ b/src/app/admin/auth/login/login.component.html
@@ -49,5 +49,7 @@
     >
       Войти
     </button>
+
+    <a routerLink="/admin/sign_up" class="light-blue-text text-lighten-2">Регистрация</a>
   </div>
 </form>
