--- a/src/app/admin/auth/admin-auth-layout/admin-auth-layout.component.html
+++ b/src/app/admin/auth/admin-auth-layout/admin-auth-layout.component.html
@@ -1,17 +1,3 @@
-<nav>
-  <div class="nav-wrapper light-blue darken-4">
-    <a routerLink="/" class="brand-logo">SampleAppAngular</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li routerLinkActive="active">
-        <a routerLink="/admin/login">Вход</a>
-      </li>
-      <li routerLinkActive="active">
-        <a routerLink="/admin/sign_up">Регистрация</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<div class="auth-block">
+<div class="auth_wrapper">
   <router-outlet></router-outlet>
 </div>
