implement login and registration

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,10 @@ html, body {
   padding: 0;
 }
 
+.toast.error{
+  background-color: color("deep-orange", "accent-4");
+}
+
 .auth_wrapper{
   background: #00B4DB;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */
