--- a/src/app/admin/admin-layout.component.html
+++ b/src/app/admin/admin-layout.component.html
@@ -1,2 +1,36 @@
-<h1>Admin Layout Component</h1>
-<router-outlet></router-outlet>
+<div class="wrap row lime lighten-5">
+  <ul id="slide-out" class="sidenav sidenav-fixed col l3">
+    <li>
+      <a class="waves-effect" routerLink="/admin/dashboard">
+        <i class="material-icons">menu</i>
+        Third Link With Waves
+      </a>
+      <a class="waves-effect" routerLink="/admin/dashboard">
+        <i class="material-icons">menu</i>
+        Third Link With Waves
+      </a>
+      <a class="waves-effect" routerLink="/admin/dashboard">
+        <i class="material-icons">menu</i>
+        Third Link With Waves
+      </a>
+    </li>
+  </ul>
+
+  <div class="col offset-l3 l9 content_wrap">
+
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper">
+          <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large-only">
+            <i class="material-icons">menu</i>
+          </a>
+          <a href="#!" class="brand-logo">SampleAppAngular</a>
+        </div>
+      </nav>
+    </div>
+
+    <div class="content_data">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
