add style for table

--- a/src/app/admin/admin-layout.component.html
+++ b/src/app/admin/admin-layout.component.html
@@ -31,8 +31,7 @@
     </li>
   </ul>
 
-  <div class="col offset-l3 m3 l9 content_wrap">
-
+  <div class="col offset-l3 l9 m12 s12 content_wrap">
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
