add list for admins

--- a/src/app/admin/admin-layout.component.html
+++ b/src/app/admin/admin-layout.component.html
@@ -1,4 +1,4 @@
-<div class="wrap row lime lighten-5">
+<div class="wrap row">
   <ul id="slide-out" class="sidenav sidenav-fixed col l3">
     <div class="user-view">
       <div class="background">
