add shared header for admin layout

--- a/src/app/admin/admins/admin-form/admin-form.component.html
+++ b/src/app/admin/admins/admin-form/admin-form.component.html
@@ -1,3 +1,5 @@
+<app-admin-header [title]="'Форма админа'"></app-admin-header>
+
 <div class="white z-depth-1 form_wrapper">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="input-field">
