add password to admin form and add validation

--- a/src/app/admin/admins/admin-form/admin-form.component.html
+++ b/src/app/admin/admins/admin-form/admin-form.component.html
@@ -1,4 +1,6 @@
-<app-admin-header [title]="'Форма админа'"></app-admin-header>
+<app-admin-header
+  [title]="isNew ? 'Создать админа' : 'Редактировать админа'"
+></app-admin-header>
 
 <div class="white z-depth-1 form_wrapper">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -23,6 +25,11 @@
     <div class="input-field">
       <input formControlName="name" id="name" type="text">
       <label for="name">Имя</label>
+    </div>
+
+    <div class="input-field">
+      <input formControlName="password" id="password" type="password">
+      <label for="password">Пароль</label>
     </div>
 
     <div>
